--- a/Doan1/Doan1/Views/Cart/Index.cshtml
+++ b/Doan1/Doan1/Views/Cart/Index.cshtml
@@ -12,9 +12,9 @@
 <table class="table">
     <thead>
         <tr>
-            <td>Mã SP</td>
-            <td>Tên SP</td>
-            <td>Ảnh SP</td>
+            <td>Mã sản phẩm</td>
+            <td>Tên sản phẩm</td>
+            <td>Ảnh sản phẩm</td>
             <td>Số lượng</td>
             <td>Đơn giá</td>
             <td>Thành tiền</td>
