--- a/Doan1/Doan1/Views/Shared/_Layout.cshtml
+++ b/Doan1/Doan1/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                             <a class="nav-link" style="color: white !important;" href="@Url.Action("Contact","Home")">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" style="color: white !important;" href="@Url.Action("Contact","Home")">Đăng ký</a>
+                            <a class="nav-link" style="color: white !important;" href="@Url.Action("Register","User")">Đăng ký</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" style="color: white !important;" href="@Url.Action("Contact","Home")">Đăng nhập</a>
@@ -100,7 +100,7 @@
         </nav>
     </header>
     <main>
-        <div class="container body-content" style="margin-top:150px">
+        <div class="container body-content" style="margin-top:100px">
             @RenderBody()
         </div>
     </main>
