--- a/Doan1/Doan1/Views/Product/Detail.cshtml
+++ b/Doan1/Doan1/Views/Product/Detail.cshtml
@@ -5,9 +5,9 @@
 
 }
 
-<div class="container-fluid" style="height:auto; margin-top:30px!important;">
+<div class="container-fluid" style="height:auto; margin-top:30px!important; ">
 
-    <h1>Thông tin chi tiết sản phẩm</h1>
+    <h1 style="color:blue">Thông tin chi tiết sản phẩm</h1>
     <div class="row">
         <div class="col-sm-4">
             @*<img class="card-img-top" src="~/Images/Product/@Model.ProductDetail.Image" alt="@Model.ProductDetail.NameProduct">
@@ -16,53 +16,59 @@
             <div class="fotorama" data-nav="thumbs" data-allowfullscreen="native">
                 <img class="card-img-top" src="~/Images/Product/@Model.ProductDetail.Image" alt="@Model.ProductDetail.NameProduct" style="width:100%;">
                 @foreach (var item in Model.listImageProduct)
-                    {
-                        <a href="~/Images/Product/@item.Image"><img src="~/Images/Product/Detail/@item.Image" width="144" height="96"></a>
-                    }
+                {
+                    <a href="~/Images/Product/@item.Image"><img src="~/Images/Product/Detail/@item.Image" width="144" height="96"></a>
+                }
 
             </div>
         </div>
         <div class="col-sm-8">
-            <h2>Tên sản phẩm: @Model.ProductDetail.NameProduct</h2>
+            <h2 style="color:blue">Tên sản phẩm: @Model.ProductDetail.NameProduct</h2>
             @if (@Model.ProductDetail.PromotionPrice != null)
             {
                 <h3>Giá sản phẩm: <strike>@Model.ProductDetail.Price.Value.ToString("N0") <i>VND</i></strike></h3>
-                <h3>Giá ưu đãi: @Model.ProductDetail.PromotionPrice.Value.ToString("N0") <i>VND</i></h3>
+                <h3 style="color:blue">Giá ưu đãi: @Model.ProductDetail.PromotionPrice.Value.ToString("N0") <i>VND</i></h3>
             }
             else
             {
-        <h3>Giá sản phẩm: @Model.ProductDetail.Price.Value.ToString("N0") <i>VND</i></h3>
+                <h3 style="color:blue">Giá sản phẩm: @Model.ProductDetail.Price.Value.ToString("N0") <i>VND</i></h3>
             }
 
             @*<h6>Giá ưu đãi: @Model.ProductDetail.PromotionPrice</h6>*@
             <p>Size:  @Model.SizeDetail.NameSize</p>
             <p>Màu: @Model.ColorDetail.NameColor</p>
             <p>
-                
+
                 <div class="buttons_added">
-                    <span style="margin-right:50px;">Số lượng :</span> 
+                    <span style="margin-right:50px;">Số lượng :</span>
                     <input class="minus is-form" type="button" value="-">
-                    <input aria-label="quantity" class="input-qty" max="@Model.ProductDetail.Quantity" min="1" id="txtQuantity" name="Quantity" type="number" value="1" >
+                    <input aria-label="quantity" class="input-qty" max="@Model.ProductDetail.Quantity" min="1" id="txtQuantity" name="Quantity" type="number" value="1">
                     <input class="plus is-form" type="button" value="+" style="margin-right:20px;">
                 </div>
 
                 @Model.ProductDetail.Quantity sản phẩm có sẵn
             </p>
-            <br/>
-    
+            <br />
+
             <div style="float:right">
                 <button class="btn btn-primary" onclick="window.location.href = '@Url.Action("AddToCart", "Cart")'+'?productId='+@Model.ProductDetail.IdProduct+'&quantity='+$('#txtQuantity').val()" style="margin-left:150px;"> Thêm giỏ hàng</button>
 
-                <button class="btn btn-danger" onclick="window.location.href = '@Url.Action("AddItem", "Cart")'+'?productId='+@Model.ProductDetail.IdProduct+'&quantity='+$('#txtQuantity').val()" style="margin-left:20px; margin-right:150px;"> 
-                 Mua hàng
-               </button>
+                <button class="btn btn-danger" onclick="window.location.href = '@Url.Action("AddItem", "Cart")'+'?productId='+@Model.ProductDetail.IdProduct+'&quantity='+$('#txtQuantity').val()" style="margin-left:20px; margin-right:150px;">
+                    Mua hàng
+                </button>
             </div>
 
         </div>
     </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
     <div class="row">
-        <div class="col-sm-12">
-            <h6>Mô tả <!--biến thành dạng giống mắt thường mình thấy--></h6>
+        <div class="col-sm-12" style="color:blue">
+            <h1><i>Mô tả chi tiết sản phẩm</i> <!--biến thành dạng giống mắt thường mình thấy--></h1>
         </div>
         <div class="col-sm-12">
             @Html.Raw(Model.ProductDetail.Detail)
