--- a/Doan1/Doan1/Areas/Admin/Views/Order/Index.cshtml
+++ b/Doan1/Doan1/Areas/Admin/Views/Order/Index.cshtml
@@ -1,83 +1,103 @@
-﻿@model List<Model.ViewModel.ProductViewModel>
+﻿@model List<Model.EF.Order>
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
+@if (ViewBag.Status == 1 )
+{
+    @section header{
 
-@section header{
-    
-    Danh sách các sản phẩm
+        Danh sách các đơn hàng mới
+    }
+}
+else if (ViewBag.Status == 2)
+{
+    @section header{
+
+        Danh sách các đơn hàng được duyệt
+    }
+}
+else if (ViewBag.Status == 3)
+{
+    @section header{
+
+        Danh sách các đơn hàng đang giao
+    }
+}
+else if (ViewBag.Status == 4)
+{
+    @section header{
+
+        Danh sách các đơn hàng đã giao
+    }
+}
+else
+{
+    @section header{
+
+        Danh sách các đơn hàng đã hủy
+    }
 }
 
+
 <!-- stylesheet lazy init -->
-<link href="//cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" rel="stylesheet"/>
-
-<div>
-    <p>
-        <buton class="btn btn-info">
-            @Html.ActionLink("Thêm mới", "Create")
-        </buton>
-
-    </p>
-
-</div>
-
-<!-- datatable -->
+<link href="//cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" rel="stylesheet" />
+@*<p>
+        @Html.ActionLink("Create New", "Create")
+    </p>*@
 <table id="dt_main" class="table  table-condensed table-striped table-bordered " style="border-collapse:collapse;">
     <thead>
         <tr>
+
             <th style="border: 1px solid #ccc;">
                 STT
             </th>
             <th style="border: 1px solid #ccc;">
-                Tên sản phẩm
+                Mã đơn hàng
             </th>
             <th style="border: 1px solid #ccc;">
-                Mô tả sản phẩm
+                Mã khách hàng
+            </th>
+
+            <th style="border: 1px solid #ccc;">
+                Tên khách hàng nhận
             </th>
             <th style="border: 1px solid #ccc;">
-                Hình ảnh
+                Số điện thoại nhận
             </th>
             <th style="border: 1px solid #ccc;">
-                Giá
+                Địa chỉ nhận
             </th>
             <th style="border: 1px solid #ccc;">
-                Giá mới
+                Ngày đặt hàng
             </th>
             <th style="border: 1px solid #ccc;">
-                Số lượng
+                Ngày giao dự kiến
+            </th>
+            @*<th>
+                    @Html.DisplayNameFor(model => model.CompleteData)
+                </th>*@
+            <th style="border: 1px solid #ccc;">
+                Địa chỉ mail người nhận
             </th>
             <th style="border: 1px solid #ccc;">
-                Mã sản phẩm
-            </th>
-            <th style="border: 1px solid #ccc;">
-                Ngày tạo
-            </th>
-            <th style="border: 1px solid #ccc;">
-                Nhà cung cấp
-            </th>
-            <th style="border: 1px solid #ccc;">
-                Loại sản phẩm
-            </th>
-            <th style="border: 1px solid #ccc;">
-                Size
-            </th>
-            <th style="border: 1px solid #ccc;">
-                Màu sắc
+                Ghi chú
             </th>
             @*<th style="border: 1px solid #ccc;">
-                Trạng thái
-            </th>*@
+                    @Html.DisplayNameFor(model => model.Status)
+                </th>*@
             <th style="border: 1px solid #ccc; width:350px;">
                 Xử lý
             </th>
+
         </tr>
     </thead>
     <tbody>
         @for (int i = 0; i < Model.Count; i++)
         {
+
             // Cai nay nen dung foreach
             var item = Model[i];
             <tr>
@@ -85,58 +105,70 @@
                     @(i+1)
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    @item.NameProduct
-                </td>
-                
-                <td style="border: 1px solid #ccc;">
-                    @item.Decription
+                    @item.IdOrder
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    <img src="~/Images/Product/@item.Image" class="img_grid" />
+                    @item.IdCustomer
+                </td>
+                @*<td>
+                        @Html.DisplayFor(modelItem => item.IdStaff)
+                    </td>*@
+                <td style="border: 1px solid #ccc;">
+                    @item.ShipName
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    @item.Price
+                    @item.ShipMoblie
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    @item.PromotionPrice
-                </td>
-                <td style="border: 1px solid #ccc;">
-                    @item.Quantity
-                </td>
-                <td style="border: 1px solid #ccc;">
-                    @item.Code
+                    @item.ShipAddress
                 </td>
                 <td style="border: 1px solid #ccc;">
                     @item.CreateDay
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    @item.NameSupplier
+                    @item.PlanDay
+                </td>
+                @*<td>
+                        @item.CompleteData)
+                    </td>*@
+                <td style="border: 1px solid #ccc;">
+                    @item.ShipEmail
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    @item.CategoryName
-                </td>
-                <td style="border: 1px solid #ccc;">
-                    @item.NameSize
-                </td>
-                <td style="border: 1px solid #ccc;">
-                    @item.NameColor
+                    @item.Note
                 </td>
                 @*<td style="border: 1px solid #ccc;">
-                    @item.Status
-                </td>*@
-                <td style="border: 1px solid #ccc;">
-                    @Html.ActionLink("Sửa", "Edit", new { id = item.IdProduct }, new { @class = "btn btn-warning" }) |
-                    @Html.ActionLink("Chi tiết", "Details", new { id = item.IdProduct }, new { @class = "btn btn-info" }) |
-                    @Html.ActionLink("Xóa", "Delete", new { id = item.IdProduct }, new { @class = "btn btn-danger" })
-                </td>
+                        @item.Status
+                    </td>*@
+            <td style="border: 1px solid #ccc;">
+                @if (ViewBag.Status == 5)
+                {
+                    <button class="btn btn-info">
+                        @Html.ActionLink("Chi tiết", "Details", new { id = item.IdOrder })
+                    </button>
+                }
+                else
+                {
+                     <button class="btn btn-warning">
+                        @Html.ActionLink("Duyệt", "Edit", new { id = item.IdOrder })
+                    </button> 
+                    <button class="btn btn-info">
+                        @Html.ActionLink("Chi tiết", "Details", new { id = item.IdOrder })
+                    </button>
+                    <button class="btn btn-danger">
+                        @Html.ActionLink("Hủy", "Delete", new { id = item.IdOrder })
+                    </button>
+                }
+               
+            </td>
             </tr>
+
         }
     </tbody>
 </table>
-
 @section Scripts {
-<script src="//cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js" type="text/javascript"></script>
-<script>
+    <script src="//cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script>
         $.fn.dataTable.defaults.oLanguage = Object.assign($.fn.dataTable.defaults.oLanguage, {
             sSearch: 'Tìm kiếm: &nbsp;/',
             sEmptyTable: 'Không có bản ghi nào',
@@ -154,5 +186,5 @@
             lengthMenu: [[10, 20, 40, -1], [10, 20, 40, "Tất cả"]],
             pageLength: 20
         });
-</script>
+    </script>
 }
