--- a/Doan1/Doan1/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Doan1/Doan1/Areas/Admin/Views/Product/Edit.cshtml
@@ -8,98 +8,133 @@
 @section header{
     Cập nhật, chỉnh sửa thông tin sản phẩm
 }
+@section jsFooter{
+    <script>
+        //$('#btnSelectImage').on('click', function (e) {
+        //    e.preventDefault();
+        //    var finder = new CKFinder();
+        //    finder.selectActionFunction = function (url) {
+        //        $('#txtImage').val(url);
+        //    };
+        //    finder.popup();
+        //})
+
+        var editor = CKEDITOR.replace('txtDetail', {
+            customConfig: '~/Assets/admin/js/plugins/ckeditor/config.js',
+        });
+    </script>
+}
+
 
 @using (Html.BeginForm("Edit", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4> Thông tin sản phẩm </h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.HiddenFor(model => model.IdProduct, htmlAttributes: new { @class = "control-label col-md-10" })
+<div class="form-horizontal">
+    <h4> Thông tin sản phẩm </h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.HiddenFor(model => model.IdProduct, htmlAttributes: new { @class = "control-label col-md-10" })
 
-        </div>
-        <div class="form-group">
-            @Html.HiddenFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-10" })
+    </div>
+    <div class="form-group">
+        @Html.HiddenFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-10" })
 
-        </div>
-        <div class="form-group">
+    </div>
+    <div class="row">
+        <div class="col-6">
             @Html.Label("Tên sản phẩm ", htmlAttributes: new { @class = "control-label col-md-10" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.NameProduct, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.NameProduct, new { htmlAttributes = new { @class = "control-label col-md-8" } })
                 @Html.ValidationMessageFor(model => model.NameProduct, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
+        <div class="col-6">
             @Html.Label("Mô tả", htmlAttributes: new { @class = "control-label col-md-10" })
             <div class="col-md-10">
                 @Html.TextBoxFor(model => model.Decription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Decription, "", new { @class = "text-danger" })
             </div>
         </div>
+    </div>
+    
+    <br />
+    <div class="row">
+        <div class="col-6">
+            @Html.Label("Hình ảnh sản phẩm", new { @class = "control-label col-md-10" })
+            <img style="width:20%; margin-left:20px;" class="card-img-top" src="~/Images/Product/@Model.Image" alt="@Model.Image"> <br /> <br />
 
-        <div class="form-group">
-            <label>Hình ảnh sản phẩm</label> <br />
-            <img style="width:20%" class="card-img-top" src="~/Images/Product/@Model.Image" alt="@Model.Image"> <br /> <br />
-            @Html.Label("Hình ảnh sản phẩm", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input name="image0" type="file" />
             </div>
         </div>
-
-        @*<div class="form-group">
-                @Html.LabelFor(model => model.MoreImages, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.MoreImages, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.MoreImages, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
-        <div class="form-group">
-            @Html.Label("Giá sản phẩm", htmlAttributes: new { @class = "control-label col-md-10" })
+        <div class="col-6">
+            @Html.Label("Hình ảnh khác của sản phẩm", new { @class = "control-label col-md-5" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+                <input name="imageList" type="file" multiple /> <!-- cho phép ta được chọn nhiều file hình hơn -->
             </div>
         </div>
+    </div>
+   <br />
+   <div class="row">
+       <div class="col-6">
+           @Html.Label("Giá sản phẩm", htmlAttributes: new { @class = "control-label col-md-10" })
+           <div class="col-md-10">
+               @Html.TextBoxFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+               @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+           </div>
+       </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.PromotionPrice, htmlAttributes: new { @class = "control-label col-md-10" })
+       <div class="col-6">
+           @Html.LabelFor(model => model.PromotionPrice, htmlAttributes: new { @class = "control-label col-md-10" })
+           <div class="col-md-10">
+               @Html.TextBoxFor(model => model.PromotionPrice, new { htmlAttributes = new { @class = "form-control" } })
+               @Html.ValidationMessageFor(model => model.PromotionPrice, "", new { @class = "text-danger" })
+           </div>
+       </div>
+
+
+   </div>
+
+   <br />
+
+    @*<div class="form-group">
+            @Html.LabelFor(model => model.MoreImages, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.PromotionPrice, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PromotionPrice, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.MoreImages, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.MoreImages, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
+<div class="row">
 
-        <div class="form-group">
-            @Html.Label("Số lượng", htmlAttributes: new { @class = "control-label col-md-10" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
-            </div>
+    <div class="col-6">
+        @Html.Label("Số lượng", htmlAttributes: new { @class = "control-label col-md-10" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
         </div>
-
-        <div class="form-group">
-            @Html.Label("Mô tả chi tiết sản phẩm ", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Detail, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Detail, "", new { @class = "text-danger" })
-            </div>
+    </div>
+    <div class="col-6">
+        @Html.Label("Mã code sản phẩm", htmlAttributes: new { @class = "control-label col-md-10" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
         </div>
-
-        <div class="form-group">
-            @Html.Label("Mã code sản phẩm", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
-            </div>
+    </div>
+</div>
+    <div class="form-group">
+        @Html.Label("Mô tả chi tiết sản phẩm ", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextAreaFor(model => model.Detail, new { htmlAttributes = new { @class = "form-control" }, @id = "txtDetail" })
+            @Html.ValidationMessageFor(model => model.Detail, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.Label("Ngày tạo", htmlAttributes: new { @class = "control-label col-md-2" })
+   
+    <div class="row">
+        <div class="col-6">
+            @Html.Label("Ngày tạo", htmlAttributes: new { @class = "control-label col-md-10" })
             <div class="col-md-10">
                 @Html.TextBoxFor(model => model.CreateDay, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CreateDay, "", new { @class = "text-danger" })
@@ -107,57 +142,66 @@
         </div>
 
         @*<div class="form-group">
-                @Html.LabelFor(model => model.ViewCrount, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.ViewCrount, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ViewCrount, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-
-        <div class="form-group">
-            @Html.Label("Sản phẩm nổi bật", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ViewCrount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.TopHot)
-                    @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
-                </div>
+                @Html.TextBoxFor(model => model.ViewCrount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ViewCrount, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+
+    <div class="col-6">
+        @Html.Label("Sản phẩm nổi bật", htmlAttributes: new { @class = "control-label col-md-12" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.Status)
+                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
             </div>
         </div>
+    </div>
+    </div>
 
-        <div class="form-group">
-            @Html.Label("Nhà cung cấp", htmlAttributes: new { @class = "control-label col-md-2" })
+    <br />
+    <div class="row">
+        <div class="col-6">
+            @Html.Label("Nhà cung cấp", htmlAttributes: new { @class = "control-label col-md-10" })
 
 
-            <div class="col-md-3">
+            <div class="col-4">
                 @Html.DropDownList("IdSupplier", null, new { @class = "form-control" })
 
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.Label("Loại sản phẩm", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-3">
+        <div class="col-6">
+            @Html.Label("Loại sản phẩm", htmlAttributes: new { @class = "control-label col-md-10" })
+            <div class="col-4">
                 @Html.DropDownList("IdCategory", null, new { @class = "form-control" })
 
             </div>
         </div>
+    </div>
+    <br />
+    <div class="row">
 
-        <div class="form-group">
+        <div class="col-6">
             @Html.Label("Màu", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-3">
+            <div class="col-4">
                 @Html.DropDownList("IdColor", null, new { @class = "form-control" })
 
             </div>
         </div>
+        <div class="col-4">
+            @Html.Label("Size", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-6">
+                @Html.DropDownList("IdSize", null, new { @class = "form-control" })
+
+            </div>
+        </div>
+
     </div>
 
 
-    <div class="form-group">
-        @Html.Label("Size", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-3">
-            @Html.DropDownList("IdSize", null, new { @class = "form-control" })
-
-        </div>
+   
 
         <br />
 
@@ -170,9 +214,9 @@
     </div>
 }
 
-<div>
+<buton class="btn btn-success">
     @Html.ActionLink("Back to List", "Index")
-</div>
+</buton>
 
 @section scripts{ <!-- section tên -->
     <script>
