--- a/Doan1/Doan1/Views/Home/Index.cshtml
+++ b/Doan1/Doan1/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
         <div class="list-group">
             @foreach (var item in CateList)
             {
-                <a href="/Category/Index/@item.IdCategory" class="list-group-item">@item.CategoryName</a>
+                <a href="~/Category/Index/@item.IdCategory" class="list-group-item">@item.CategoryName</a>
             }
         </div>
 
