--- a/Doan1/Doan1/Views/Product/Detail.cshtml
+++ b/Doan1/Doan1/Views/Product/Detail.cshtml
@@ -68,7 +68,7 @@
 
     <div class="row">
         <div class="col-sm-12" style="color:blue">
-            <h1><i>Mô tả chi tiết sản phẩm</i> <!--biến thành dạng giống mắt thường mình thấy--></h1>
+            <h1><i>Chi tiết sản phẩm</i> <!--biến thành dạng giống mắt thường mình thấy--></h1>
         </div>
         <div class="col-sm-12">
             @Html.Raw(Model.ProductDetail.Detail)
