--- a/Doan1/Doan1/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Doan1/Doan1/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -32,11 +32,11 @@
             <div id="sidebar-nav" class="sidebar-nav">
                 <ul>
                     <li>
-                        <a href="#device-controls5" data-toggle="collapse">
-                            <span class="sidebar-nav-icon fa fa-rocket">
-                            </span> <span class="sidebar-nav-text">Quản lý đơn hàng</span>
+                        <a href="#device-controls5" data-toggle="collapse" style="display:flex;">
+                            <span class="sidebar-nav-icon fa fa-rocket" >
+                            </span> <span class="sidebar-nav-text" > @Html.ActionLink("Quản lý đơn hàng", "Index1", "Order") </span>
                         </a>
-                        <ul id="device-controls5" class="collapse" data-parent="#sidebar-nav">
+                        @*<ul id="device-controls5" class="collapse" data-parent="#sidebar-nav">
                             <li>
                                 <a> @Html.ActionLink("Đơn hàng mới", "Index", "Order", new { status = 1 }, null) </a>
                             </li>
@@ -52,7 +52,7 @@
                             <li>
                                 <a>@Html.ActionLink("Đơn hàng đã hủy", "Index", "Order", new { status = 5 }, null)</a>
                             </li>
-                        </ul>
+                        </ul>*@
                     </li>
                 </ul>
                 <hr>
@@ -175,7 +175,7 @@
     <script src="~/Assets/admin/js/plugins/ckeditor/ckeditor.js"></script>
     <script src="~/Assets/admin/js/docs.js"></script>
     @RenderSection("jsFooter", required: false)
-    @RenderSection("Scripts", true)
+    @RenderSection("Scripts", required: false)
 
 </body>
 
