--- a/Doan1/Doan1/Areas/Admin/Views/Staff/Edit.cshtml
+++ b/Doan1/Doan1/Areas/Admin/Views/Staff/Edit.cshtml
@@ -109,7 +109,7 @@
 }
 
 <div>
-    <button type="button" class="btn btn-success">@Html.ActionLink("Back to List", "Index")</button>
+    <button type="button" class="btn btn-success">@Html.ActionLink("Trở về", "Index")</button>
 
 
 </div>
