--- a/Doan1/Doan1/Views/Category/Index.cshtml
+++ b/Doan1/Doan1/Views/Category/Index.cshtml
@@ -6,7 +6,7 @@
 <p>
     @Html.Raw(Model.CategoryDetail.CategoryName)
 </p>
-<div>
+<div class="row">
     @foreach (var item in Model.ProductList)
     {
         <div class="col-lg-4 col-md-6 mb-4">
