--- a/Doan1/Doan1/Views/Shared/_Layout.cshtml
+++ b/Doan1/Doan1/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                                         Thông tin tài khoản
                                     </a>
 
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="@Url.Action("Index","Order")">
                                         <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                                         Đơn mua hàng
                                     </a>
