--- a/Doan1/Doan1/Areas/Admin/Views/Order/Detail.cshtml
+++ b/Doan1/Doan1/Areas/Admin/Views/Order/Detail.cshtml
@@ -88,6 +88,8 @@
                     }
                     &nbsp;| &nbsp;
                     <p>@item.UpdateDay</p>
+                    &nbsp;| &nbsp;
+                    <p>Mã Nhân Viên thực hiện  : @item.IdStaff</p>
                 </div>
                 }
             </div>
