--- a/Doan1/Doan1/Views/Order/Index.cshtml
+++ b/Doan1/Doan1/Views/Order/Index.cshtml
@@ -1,9 +1,9 @@
-﻿@model Model.ViewModel.OrderViewViewModel
+﻿@model List<Model.ViewModel.OrderViewViewModel>
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_OrderLayout.cshtml";
 }
-<div style="display: flex; width:100%; ">
+@*<div style="display: flex; width:100%; ">
     <button style="display: flex; width:300px;background:#fff; height:50px;margin-top:30px; font-size:16px;border:none;">
         <a href="#" style="text-decoration: none;">Tất cả đơn hàng</a>
     </button>
@@ -22,8 +22,9 @@
     <button style="display: flex; width:300px;background:#fff; height:50px;margin-top:30px;font-size:16px;border:none;">
         <a href="#" style="text-decoration: none;">Đã Hủy</a>
     </button>
-</div>
-<div >
+</div>*@
+
+<div>
     @foreach (var item in Model.OrderList)
     {
         <div class="col">
