--- a/Doan1/Doan1/Views/Order/_OrderDetailView.cshtml
+++ b/Doan1/Doan1/Views/Order/_OrderDetailView.cshtml
@@ -1,4 +1,4 @@
-﻿@model Doan1.Models.OrderItem
+﻿@model Model.ViewModel.OrderViewViewModel
 <div> 
     <div>
         <div>@Model.OrderDetail.IdProduct</div>
